--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.0.2.RELEASE</version>
+            <version>[6.1.14,)</version>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
